# hockey_pandas_practice

./: README.md  pyproject.toml  requirements.txt  set_paths.py  settings.py
data/interim/: master.pkl  master_2.pkl  master_score.pkl  master_score_2.pkl  scoring.pkl  scoring_2.pkl  scoring_multi_index.pkl  scoring_multi_index_2.pkl  team_splits_date_index.pkl  teams_2.pkl  teams_splits.pkl  teams_splits_multi_index.pkl  teams_splits_multi_index_2.pkl  teams_team_splits.pkl  teams_team_splits_2.pkl
helpers/: mem.py  memory.py
notebooks/: handling_time_series.ipynb  handling_time_series_2.ipynb  joining_2.ipynb  joining_multiple_data_tables.ipynb  moving_between_wide_and_long.ipynb  moving_between_wide_and_long_2.ipynb  multi_level_indexes.ipynb  multi_level_indexes_2.ipynb  plotting.ipynb  plotting_2.ipynb  prep_dataset.ipynb  preparing_dataset.ipynb  windows.ipynb  windows_2.ipynb
