[project]
name = "hockey_df"
version = "0.1.0"
description = "The repository is dedicated to exercises in data science and python programming."
authors = ["Piotr Lipinski <kinetics20@gmail.com>"]
license = "Beerware"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "pyarrow>=19.0.1",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.2",
]
